Added development environment to buildout configuration file. Install it with bin/buildout -N install dev-environment.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,9 +28,12 @@ eggs =
 # Install them with bin/buildout install -N dev-environment
 recipe = zc.recipe.egg
 eggs =
+    ${debianisobuilder:eggs}
     Sphinx
     bpython
     nose
+    rednose
+    coverage
     zest.releaser
 
 [versions]
@@ -57,7 +60,16 @@ Markdown = 2.1.1
 Cheetah = 2.4.4
 
 # Development environment
-Jinja2 = 2.6
 Sphinx = 1.1.3
 bpython = 0.10.1
 nose = 1.1.2
+rednose = 0.3
+coverage = 3.5.1
+
+# Required by:
+# Sphinx==1.1.3
+Jinja2 = 2.6
+
+# Required by:
+# rednose==0.3
+python-termstyle = 0.1.9
