Improved (fixed) sample preseed file to create a Vagrant base box.

--- a/etc/preseed-squeeze-vagrant-fr.cfg
+++ b/etc/preseed-squeeze-vagrant-fr.cfg
@@ -417,7 +417,8 @@ d-i debian-installer/exit/poweroff boolean true
 #   Public key source is https://raw.github.com/mitchellh/vagrant/master/keys/vagrant.pub
 # - SSH security: disable root login.
 # - SSH security: disable password authentication. Disallows login via the GUI!
-# - VirtualBox Guest Additions requirements.
+# - Uninstall Debian's virtualbox-ose.
+# - Install VirtualBox Guest Additions requirements.
 # - Install VirtualBox guest additions.
 #   This operation is done with a trick: we install VirtualBox locally
 #   to get the VBoxGuestAddition iso file... then uninstall VirtualBox.
@@ -438,6 +439,7 @@ d-i preseed/late_command string \
     in-target chmod -R go-rwx /home/vagrant/authorized_keys; \
     in-target sed -i 's/PermitRootLogin yes/PermitRootLogin no/g' /etc/ssh/sshd_config; \
     in-target sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/g' /etc/ssh/sshd_config; \
+    in-target aptitude purge --assume-yes virtualbox-ose-guest-dkms virtualbox-ose-guest-utils virtualbox-ose-guest-x11; \
     in-target aptitude install --without-recommends --assume-yes dkms build-essential linux-headers-`uname -r`; \
     in-target sh -c "echo 'deb http://download.virtualbox.org/virtualbox/debian squeeze contrib non-free' > /etc/apt/sources.list.d/virtualbox.list"; \
     in-target wget http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc; \
@@ -447,14 +449,15 @@ d-i preseed/late_command string \
     in-target aptitude update; \
     in-target aptitude install --without-recommends --assume-yes virtualbox-4.1; \
     in-target cp /usr/share/virtualbox/VBoxGuestAdditions.iso ./; \
-    in-target sudo aptitude purge --assume-yes virtualbox-4.1; \
+    in-target aptitude purge --assume-yes virtualbox-4.1; \
     in-target modprobe loop; \
     in-target mkdir /mnt/vboxguestadditions; \
-    in-target mount -t iso9660 -o loop ./VBoxGuestAdditions.iso /mnt/vboxguestadditions: \
+    in-target mount -t iso9660 -o loop ./VBoxGuestAdditions.iso /mnt/vboxguestadditions; \
     in-target sh /mnt/vboxguestadditions/VBoxLinuxAdditions.run; \
     in-target umount /mnt/vboxguestadditions; \
     in-target rm -r /mnt/vboxguestadditions; \
     in-target rm VBoxGuestAdditions.iso; \
     in-target rm /etc/udev/rules.d/70-persistent-net.rules; \
     in-target aptitude clean; \
-    in-target dd if=/dev/zero of=/EMPTY bs=1M; rm -f /EMPTY;
+    in-target dd if=/dev/zero of=/EMPTY bs=1M; \
+    in-target rm -f /EMPTY;
