--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,9 @@
 extensions = buildout-versions
 versions = versions
 parts =
-    debianisobuilder
+    debisogen
+    testing
+    documentation
 
 # Configure directories: put buildout generated files in lib/buildout instead
 # of in current directory.
@@ -17,38 +19,38 @@ parts-directory = lib/buildout/parts
 # Packages under development
 develop = ${buildout:directory}/
 
-[debianisobuilder]
+[debisogen]
 recipe = zc.recipe.egg
 eggs =
     PasteScript
-    marmelune.debianisobuilder
+    debisogen
 
-[dev-environment]
+[testing]
 # Development tools, for contributors.
 # Install them with bin/buildout install -N dev-environment
 recipe = zc.recipe.egg
 eggs =
-    ${debianisobuilder:eggs}
-    Sphinx
+    ${debisogen:eggs}
     bpython
     nose
     rednose
     coverage
-    zest.releaser
+
+[documentation]
+recipe = zc.recipe.egg
+eggs = zc.rst2
 
 [versions]
 Paste = 1.7.5.1
 buildout-versions = 1.7
-distribute = 0.6.25
 zc.recipe.egg = 1.3.2
-zest.releaser = 3.34
 
 # Required by:
 # PasteScript==1.7.5
 PasteDeploy = 1.5.0
 
 # Required by:
-# marmelune.debianisobuilder==0.1
+# debisogen==0.1
 PasteScript = 1.7.5
 
 # Required by:
@@ -56,19 +58,17 @@ PasteScript = 1.7.5
 Markdown = 2.1.1
 
 # Required by:
-# marmelune.debianisobuilder==0.1dev-
+# debisogen==0.1dev-
 Cheetah = 2.4.4
 
 # Development environment
-Sphinx = 1.1.3
 bpython = 0.10.1
 nose = 1.1.2
 rednose = 0.3
 coverage = 3.5.1
 
-# Required by:
-# Sphinx==1.1.3
-Jinja2 = 2.6
+# Documentation
+zc.rst2 = 0.2
 
 # Required by:
 # rednose==0.3
