--- a/etc/preseed-vagrant.cfg
+++ b/etc/preseed-vagrant.cfg
@@ -12,7 +12,7 @@
 #### Contents of the preconfiguration file (for squeeze)
 ### Localization
 # Preseeding only locale sets language, country and locale.
-d-i debian-installer/locale string en_US
+d-i debian-installer/locale string en_US.UTF-8
 
 # The values can also be preseeded individually for greater flexibility.
 #d-i debian-installer/language string en
@@ -65,7 +65,7 @@ d-i netcfg/choose_interface select auto
 # Any hostname and domain names assigned from dhcp take precedence over
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
-d-i netcfg/get_hostname string vagrant-debian-squeeze
+d-i netcfg/get_hostname string vagrant-debian
 d-i netcfg/get_domain string vagrantup.com
 
 # Disable that annoying WEP key dialog.
